--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "burgers",
   "version": "1.0.0",
-  "description": "",
+  "description": "Overview\r A Node, Express, Handlebars, and MySQL burger app that lets users input the names of burgers they'd like to eat... and then devour them! Please check out the launched app on Heroku here!",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,6 +21,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "method-override": "^3.0.0",
     "mysql": "^2.16.0"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
